Rapid Prd/src/objects/Bids__c.object
<CustomObject>
    <fields>
        <fullName>BOBA_Commission__c</fullName>
        <formula>IF( Sold_Short__c ,  Lost_Boy__r.BOBA_Commission__c*Contract_Amount__c/2, Lost_Boy__r.BOBA_Commission__c*Contract_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOBA Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BOOP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOOP</label>
        <referenceTo>BOOP__c</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Amount__c</fullName>
        <label>Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Fees__c</fullName>
        <label>Contract Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Number_of_Payments__c</fullName>
        <label>Contract Number of Payments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Payback_Amount__c</fullName>
        <label>Contract Payback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Pmt_Amt__c</fullName>
        <label>Contract Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Term_del__c</fullName>
        <formula>BOOP__r.Contracted_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Upsell__c</fullName>
        <label>Contract Upsell Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracted_Term__c</fullName>
        <label>Contracted Term</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funded_Date__c</fullName>
        <label>Funded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Boy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lost Boy</label>
        <referenceTo>Lost_Boy__c</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marble__c</fullName>
        <label>Marble</label>
        <referenceTo>Marble__c</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Max_Upsell__c</fullName>
        <label>Max Upsell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max Quote?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <label>Number of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_BOBA_Commission__c</fullName>
        <formula>IF(BOOP__r.Renewal__c,  BOOP__r.Broker_Out_Renewal_Split__c* Total_Commission__c,  BOOP__r.Broker_Out_New_Split__c*Total_Commission__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner BOBA Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payback_Amount__c</fullName>
        <label>Payback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Interval__c</fullName>
        <label>Payment Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Interval</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Amount__c</fullName>
        <label>Quote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Term__c</fullName>
        <label>Quote Term</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Eligible__c</fullName>
        <formula>Funded_Date__c +(Contracted_Term__c *(365/12)* BOOP__r.Partner__r.Renewal_Eligibility__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Eligible</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_Short__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold Short</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Commission__c</fullName>
        <description>Total Broker Out Commission</description>
        <label>Total Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Bid</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>